LegacySourceParser minor update
-LegacySourceParser now won't crash at the first sight of a section
-Small code improvements thanks to Java 21